force-app/main/default/objects/cgcloud__Account_Relationship__c/cgcloud__Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>Represents the relationship between two customer accounts.</description>
    <label>Customer Relationship</label>
    <nameField>
        <displayFormat>Relation-{0000}</displayFormat>
        <label>Customer Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>