force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Date__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>The date until when the relationship is active.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>