force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Is_Primary_Relationship__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Primary_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the relationship is a primary relationship.</description>
    <label>Primary Relationship</label>
    <type>Checkbox</type>
</CustomField>