force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Related_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer who is related to the main customer of the relationship.</description>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Customer’s Relationships</relationshipLabel>
    <relationshipName>Related_Account_Relation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>