force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Related_Account_Name__c</fullName>
    <description>Name of the customer who is related to the main customer of the relationship.</description>
    <formula>cgcloud__Related_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Customer Name</label>
    <type>Text</type>
</CustomField>