force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BillTo</fullName>
                <label>Bill To</label>
            </value>
            <value>
                <fullName>DeliveryRecipient</fullName>
                <label>Delivery Recipient</label>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>