force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Self_Relationship__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Self_Relationship__c</fullName>
    <description>The formula that’s used to indicate that the relationship is a self-relationship.</description>
    <formula>cgcloud__Account__c = cgcloud__Related_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Relationship</label>
    <type>Checkbox</type>
</CustomField>