force-app/main/default/objects/cgcloud__Account_Relationship__c/fields/cgcloud__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>The date from when the relationship is active.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>