force-app/main/default/objects/cgcloud__Account_Relationship__c/validationRules/cgcloud__No_Self_Reln_For_Broker_and_Recipient.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__No_Self_Reln_For_Broker_and_Recipient</fullName>
    <active>true</active>
    <description>The Customer and the Related customer can&apos;t be the same.</description>
    <errorConditionFormula>(ISPICKVAL(cgcloud__Relationship_Type__c ,&apos;Wholesaler&apos;)  || ISPICKVAL(cgcloud__Relationship_Type__c ,&apos;DeliveryRecipient&apos;))  &amp;&amp;  cgcloud__Account__c =  cgcloud__Related_Account__c</errorConditionFormula>
    <errorMessage>The Customer and the Related customer can&apos;t be the same.</errorMessage>
</ValidationRule>