force-app/main/default/objects/cgcloud__Account_Relationship__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Related_Account__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Account__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Related Customers must have the same Sales Org.</errorMessage>
</ValidationRule>