force-app/main/default/objects/cgcloud__Account_Relationship__c/validationRules/cgcloud__Start_Date_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Start_Date_End_Date_Validation</fullName>
    <active>true</active>
    <description>This validates that Start Date cannot be greater than End Date</description>
    <errorConditionFormula>cgcloud__Start_Date__c &gt; cgcloud__End_Date__c</errorConditionFormula>
    <errorMessage>Start Date can&apos;t be later than End Date.</errorMessage>
</ValidationRule>